# Money-tracking

./: .gitignore  ARCHITECTURE_VISUAL_GUIDE.md  BALANCE_METHOD_资金追踪结果.xlsx  CLAUDE.md  FIFO_资金追踪结果.xlsx  PROJECT_ARCHITECTURE.md  PROJECT_ARCHITECTURE_COMPLETE.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_EN.md  README_ZH.md  STAGE_1_TOOL_LAYER_VALIDATION_SUMMARY.md  System_Architecture_Diagram.md  analyze_data_format.py  check_original_data.py  check_results.py  convert-icon-instructions.md  create-simple-icon.py  flux-test-sandbox.wsb  generate_sample_data.py  simple_analyze.py  svg-to-icon.html  场外资金池记录_BALANCE_METHOD.xlsx  场外资金池记录_FIFO.xlsx  场外资金池记录_FIFO_备份.xlsx  流水.xlsx  脱敏流水.xlsx  项目提案草案_中文版.md
.claude/: settings.local.json
.cursor/rules/: riper.mdc
benchmarks/: python_performance_baseline.py
benchmarks/results/: python_baseline_latest.json
data/output/: BALANCE_METHOD_资金追踪结果.xlsx  FIFO资金追踪结果.xlsx  投资产品交易记录.xlsx  投资产品交易记录_BALANCE_METHOD.xlsx
docs/: README.md  TAURI_SETUP_GUIDE.md  architecture_analysis.md  balance_method_logic.md  module_reusability_analysis.md  产品介绍.docx  产品功能介绍.md
independent_tests/: README.md
independent_tests/algorithm_validation_tests/: Cargo.toml  TESTING_STATUS.md
independent_tests/algorithm_validation_tests/output/: BALANCE_METHOD_最终修复版算法分析结果.xlsx  FIFO_最终修复版算法分析结果.xlsx  algorithm_validation_report.md  balance_method_rust_results.json  excel_processing_test_report.txt  fifo_rust_results.json
independent_tests/algorithm_validation_tests/src/: common.rs  final_corrected_algorithm_test.rs
independent_tests/preprocessing_validation_test/: README.md  balance_column_comparison.py  final_balance_comparison.py  generate_python_preprocessed.py
legacy/: config.py
legacy/models/: __init__.py  fifo_tracker.py  flow_analyzer.py
legacy/utils/: data_processor.py  flow_integrity_validator.py  logger.py  validators.py
preprocessing_validation_test/: Cargo.toml  column_structure_analysis.py  compare_outputs.py  correct_balance_comparison.py  python_preprocessed_output.xlsx  rust_preprocessed_output.xlsx  rust_preprocessing_validation.json
preprocessing_validation_test/src/: main.rs
rust-backend/: Cargo.toml
rust-backend/benches/: algorithm_benchmark.rs  data_processing_benchmark.rs
rust-backend/src/: lib.rs
rust-backend/src/algorithms/: balance_method_tracker.rs  behavior_analyzer.rs  fifo_tracker.rs  flow_analyzer.rs  mod.rs  tracker_factory.rs
rust-backend/src/algorithms/shared/: behavior_analyzer.rs  fund_flow_common.rs  investment_pool.rs  mod.rs  summary.rs  tracker_base.rs
rust-backend/src/data_models/: fund_pool.rs  mod.rs  offsite_pool_record.rs  tauri_types.rs  transaction.rs
rust-backend/src/data_structures/: fifo_queue.rs  fund_pool.rs  mod.rs  process_result.rs  statistics.rs  transaction.rs
rust-backend/src/errors/: mod.rs
rust-backend/src/interfaces/: analyzer.rs  mod.rs  tracker.rs
rust-backend/src/models/: audit_summary.rs  config.rs  fund_pool.rs  investment.rs  mod.rs
rust-backend/src/optimizations/: mod.rs
rust-backend/src/processors/: data_preprocessor.rs  flow_analyzer.rs  mod.rs
rust-backend/src/services/: audit_service.rs  integration_processor.rs  investment_service.rs  mod.rs  time_point_service.rs  time_point_service_old.rs
rust-backend/src/utils/: config.rs  data_processor.rs  error.rs  excel_processor.rs  excel_reader.rs  fund_utils.rs  logger.rs  mod.rs  simple_excel.rs  time_processor.rs  unified_validator.rs  validator.rs
rust-backend/tests/: service_integration_test.rs
src/: BALANCE_METHOD_资金追踪结果.xlsx  FIFO_资金追踪结果.xlsx  __init__.py  config.py  debug_tool.py  main.py  main_new.py  requirements.txt  test_behavior_cleanup.py  test_fixed_logic.py  test_pool_logic.py  test_reset_logic.py  场外资金池记录_BALANCE_METHOD.xlsx  场外资金池记录_FIFO.xlsx  场外资金池记录_FIFO_备份.xlsx
src/core/: __init__.py
src/core/factories/: __init__.py  tracker_factory.py
src/core/interfaces/: __init__.py  tracker_interface.py
src/core/trackers/: __init__.py  balance_method_tracker.py  fifo_adapter.py  fifo_tracker.py
src/models/: __init__.py  behavior_analyzer.py  fifo_algorithm.py  fifo_tracker.py  investment_manager.py
src/services/: __init__.py  audit_service.py  fund_pool_cli.py  query_cli.py  time_point_query_service.py
src/utils/: data_processor.py  flow_integrity_validator.py  visualization.py
tauri-app/: .gitignore  BACKEND_TEST_REPORT.md  PROFESSIONAL_DISTRIBUTION.md  README.md  RUST_BACKEND_API.md  STANDALONE_VERSION_GUIDE.md  UPDATE_CONFIGURATION_GUIDE.md  index.html  package-lock.json  package.json  release-notes.md  tsconfig.json  vite.config.ts  启动测试.bat  🚀启动GUI界面.md
tauri-app/.github/workflows/: release.yml
tauri-app/scripts/: build_standalone.ps1  release.ps1
tauri-app/src/: App.tsx  main.tsx
tauri-app/src-tauri/: Cargo.toml  License.rtf  installer-template.nsh  installer.wxs  tauri.conf.json
tauri-app/src-tauri/src/: main.rs  main_simplified.rs
tauri-app/src-tauri/src/commands/: mod.rs  time_point_commands.rs
tauri-app/src/components/: AnalysisHistoryPanel.tsx  ErrorBoundary.tsx  FluxLogo.tsx  HybridDateTimePicker.tsx  IOSDateTimePicker.tsx  ScatteredFluxText.tsx  TimeBasedCleanupDialog.tsx
tauri-app/src/contexts/: AppStateContext.tsx  LanguageContext.tsx  NotificationContext.tsx  ThemeContext.tsx
tauri-app/src/locales/: en.json  i18n.ts  zh.json
tauri-app/src/pages/: AuditPage.tsx  HomePage.tsx  SettingsPage.tsx  TimePointQueryPage.tsx
tauri-app/src/services/: fileService.ts  pythonService.ts  systemService.ts  updateService.ts
tauri-app/src/styles/: index.css
tauri-app/src/test/: backend-test.js
tauri-app/src/types/: analysisHistory.ts  app.ts  python.ts  rust-commands.ts
tauri-app/src/utils/: timeUtils.ts  (+4 more)
tests/: check_9794.py  check_data.py  check_preprocessing.py  diagnose_data.py  test_balance_method_fix.py  test_basic.py  test_dual_algorithm.py  test_flow_integrity.py  test_greedy_strategy.py  test_time_point_query.py  test_user_scenario_comparison.py
原始数据/: AI审计算法2500707+-lx.xlsx  计算.py
软著申请材料/: 程序鉴别材料_前35页_模板.txt  程序鉴别材料_后35页_模板.txt
(+1 files in other folders)
