[package]
name = "preprocessing_validation_test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_rust_preprocessed"
path = "src/main.rs"

[dependencies]
calamine = { version = "0.26", features = ["dates"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.36", features = ["serde-with-str"] }
serde_json = "1.0"
rust_xlsxwriter = "0.76"