[package]
name = "audit-backend"
version = "0.1.0"
edition = "2021"
authors = ["审计团队"]
description = "涉案资金追踪分析系统Rust后端"
license = "MIT"
repository = ""

[lib]
name = "audit_backend"
crate-type = ["lib", "cdylib"]

[dependencies]
# 数据处理引擎
polars = { version = "0.36", features = [
    "lazy", "temporal", "strings", "dtype-datetime", 
    "csv", "json", "parquet"
] }
ndarray = "0.15"
nalgebra = "0.32"

# Excel文件处理
calamine = { version = "0.23", features = ["dates"] }
# xlsxwriter = "0.6"  # 暂时注释，需要libclang

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# 序列化
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日期时间
chrono = { version = "0.4", features = ["serde"] }

# 数据结构
indexmap = { version = "2.0", features = ["serde"] }
smallvec = "1.11"

# 并行计算
rayon = "1.8"
crossbeam = "0.8"

# 性能优化
once_cell = "1.19"
parking_lot = "0.12"
dashmap = { version = "5.5", optional = true }

# SIMD优化
wide = { version = "0.7", optional = true }

# 内存数据库(可选)
sled = { version = "0.34", optional = true }

# 日志系统
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 测试和基准
criterion = { version = "0.5", optional = true }
proptest = { version = "1.4", optional = true }

# UUID生成
uuid = { version = "1.6", features = ["v4", "serde"] }

# 异步trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"
proptest = "1.4"
num_cpus = "1.16"
regex = "1.10"

[[bench]]
name = "algorithm_benchmark"
harness = false

[[bench]]
name = "data_processing_benchmark"
harness = false

[features]
default = ["simd", "cache"]
simd = ["wide"]
cache = ["sled", "dashmap"]
benchmark = ["criterion"]
property-testing = ["proptest"]

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = "unwind"
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
debug = false
split-debuginfo = "off"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true