[package]
name = "flux-backend"
version = "3.3.4"
edition = "2021"
description = "FLUX资金追踪分析系统 Rust后端"
authors = ["刘光浚"]
license = "MIT"

[[bin]]
name = "flux-cli"
path = "src/bin/main.rs"

[[bin]]
name = "test_excel_read"
path = "src/bin/test_excel_read.rs"

# [[bin]]
# name = "debug_excel"
# path = "src/bin/debug_excel.rs"

# [[bin]]
# name = "export_excel_result"
# path = "src/bin/export_excel_result.rs"

# [[bin]]
# name = "integration_test"
# path = "src/bin/integration_test.rs"

[dependencies]
# 核心依赖
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# 序列化和反序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Excel处理
calamine = "0.26"      # Excel读取
rust_xlsxwriter = "0.76"  # Excel写入，纯Rust实现，比xlsxwriter更好

# 数据处理
# polars = { version = "0.42", features = ["lazy", "json", "temporal", "strings"] }  # 暂时不使用

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# 随机数生成（用于临时文件名）
rand = "0.8"

# 精确小数计算
rust_decimal = { version = "1.35", features = ["serde"] }

# 字符串处理
regex = "1.10"

# 文件系统和路径
dirs = "5.0"

# 集合类型扩展
indexmap = "2.2"

# 异步支持
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }

# 命令行参数解析
clap = { version = "4.5", features = ["derive"] }

# 工具类
uuid = { version = "1.10", features = ["v4", "serde"] }

# 数学计算
num-traits = "0.2"
approx = "0.5"

# 内存映射文件 - 暂时移除
# memmap2 = "0.9"

# 压缩 - 暂时移除
# brotli = "6.0"

# 统计和分析 - 暂时移除由于兼容性问题
# argminmax = "0.6"

[dev-dependencies]
tempfile = "3.8"
assert_approx_eq = "1.1"

# 性能基准测试
criterion = "0.5"

# [[bench]]
# name = "audit_benchmark"
# harness = false

[profile.dev]
opt-level = 0
debug = true
strip = false
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
strip = true
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false