[package]
name = "algorithm-tests"
version = "0.1.0"
edition = "2021"
description = "FIFO资金追踪算法验证测试套件"

[[bin]]
name = "final_corrected_algorithm_test"
path = "src/final_corrected_algorithm_test.rs"

[dependencies]
# 本地Rust后端库
audit-backend = { path = "../../rust-backend" }

# 核心依赖
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.35", features = ["serde-with-str"] }

# Excel处理
calamine = "0.26"
rust_xlsxwriter = "0.76"

# 日志和错误处理  
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
anyhow = "1.0"

# 测试和比较
similar = "2.4"         # 文本差异比较
colored = "2.0"         # 彩色输出

[dev-dependencies]
tempfile = "3.8"        # 临时文件测试