[package]
name = "fifo-audit-desktop"
version = "2.0.0"
description = "FIFO资金追踪审计系统桌面版"
authors = ["审计团队"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.5.1", features = [ "window-show", "protocol-asset", "dialog-message", "shell-execute", "fs-read-file", "window-close", "fs-remove-dir", "window-unmaximize", "window-print", "shell-open", "fs-read-dir", "path-all", "dialog-open", "dialog-save", "notification-all", "process-exit", "window-minimize", "window-maximize", "fs-exists", "fs-remove-file", "dialog-confirm", "window-start-dragging", "window-unminimize", "fs-copy-file", "fs-rename-file", "fs-create-dir", "dialog-ask", "window-hide", "fs-write-file"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32", "Win32_Foundation", "Win32_Graphics", "Win32_Graphics_Dwm", "Win32_System", "Win32_System_LibraryLoader", "Win32_UI", "Win32_UI_WindowsAndMessaging"] }
raw-window-handle = "0.5"
anyhow = "1.0"

# File system and process management
dirs = "5.0"
which = "4.4"

# Logging
log = "0.4"
env_logger = "0.10"

# DateTime handling
chrono = { version = "0.4", features = ["serde"] }

# Text processing
regex = "1.0"

# Rust backend library
audit-backend = { path = "../../rust-backend" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
